Bug 297934 - BCC is not removed when attaching messages
Summary: BCC is not removed when attaching messages
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-11 22:36 UTC by John Zaitseff
Modified: 2012-04-12 18:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Zaitseff 2012-04-11 22:36:18 UTC
User-Agent:       Mozilla/5.0 (X11; Linux) KHTML/4.8.2 (like Gecko) Konqueror/4.8
Build Identifier: 

If you attach one or more previously-written messages to one that you are composing, the BCC field in those attached messages are not removed: a major privacy violation.


Reproducible: Always

Steps to Reproduce:
1. Create a new message using composer.
2. Write some arbitrary text (optional)
3. Drag and drop a previously-written message (that has a BCC field in it) into the new message.
4. Send the message, even if only to yourself.
5. Verify that the attached message retains the BCC field.
Actual Results:  
The BCC field in the attached messages (MIME type message/rfc822) is not removed.

Expected Results:  
The BCC field in all attached messages should be removed, the same as the BCC field of the final message itself is removed when sending.

I believe that this is a major privacy violation: the BCC field is expected to remain private, and there is no indication that that might not be the case.  Furthermore, there is no way to edit dragged-and-dropped attached messages (at least, that I am aware of, short of manually saving the complete message as a draft, then editing that outside of kmail2/kontact).
Comment 1 Laurent Montel 2012-04-12 06:35:09 UTC
Will look at it
Comment 2 Laurent Montel 2012-04-12 07:35:01 UTC
I confirm it will look at it
Comment 3 Laurent Montel 2012-04-12 18:50:28 UTC
Git commit 46648213ff39174e2629ef594b2b1e241d19d665 by Montel Laurent.
Committed on 12/04/2012 at 20:49.
Pushed by mlaurent into branch 'master'.

Fix Bug 297934 - BCC is not removed when attaching messages

FIXED-IN: 4.8.3

M  +3    -1    messagecomposer/messagefactory.cpp

http://commits.kde.org/kdepim/46648213ff39174e2629ef594b2b1e241d19d665
Comment 4 Laurent Montel 2012-04-12 18:51:29 UTC
Git commit 30769cbe6bb6792ee3b65218074653b2d6ae05a8 by Montel Laurent.
Committed on 12/04/2012 at 20:49.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 297934 - BCC is not removed when attaching messages

FIXED-IN: 4.8.3
(cherry picked from commit 46648213ff39174e2629ef594b2b1e241d19d665)

M  +3    -1    messagecomposer/messagefactory.cpp

http://commits.kde.org/kdepim/30769cbe6bb6792ee3b65218074653b2d6ae05a8