Fix Bug 297934 - BCC is not removed when attaching messages

FIXED-IN: 4.8.3
BUG: 297934
(cherry picked from commit 46648213ff39174e2629ef594b2b1e241d19d665)